2001-02-19  Frank Warmerdam  <warmerdam@pobox.com>

	* testsuite: added RPF test data, and script. 

	* ogdi/makefile: removed glutil from subdirs, it doesn't seem to
	play a role in normal OGDI.

	* mkogdidist.sh: added new file for making source distributions.

2001-02-18  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/adrg: adrg.c adrg.h object.c utils.c
	  ogdi/drivers/dted: dted.c, object.c
	  ogdi/drivers/skeleton: skeleton.c, skeleton.h, open.c, object.c
	  ogdi/drivers/network/remote.c
	  ogdi/drivers/vrf: feature.c, object.c, open.c, vrf.c
	  ogdi/drivers/rpf: object.c, rpf.c, rpf.h, utils.c
	
	  Avoid unused argument and other warnings.

	* ogdi/datum_driver/canada/dtcanada.c, ogdi/datum_driver/usa/dtusa.c
	  ogdi/c-api: client.c ecsgeo.c, ogdi/include/ecs_util.h
	  contrib/ogdi_info/ogdi_info.c

	  Fixed so that PROJ.4.4.x with projUV instead of UV will also work.

	* */makefile: include explicit clean targets, and get rid of test
	  targets alltogether to avoid override messages from GNUmake.

	* readme.sun: removed, adequately addressed in build.html.

	* modif.txt: removed, and incorporated into ChangeLog.

	* ogdi/gltpd: ecs_sif.c, asyncsvr.c
	Cleanup lots of compiler warnings. 

2001-02-17  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/c-api: ecs_xdrz.c, ecshash.c ecstile.c server.c
	Avoid compiler warnings about unused variables, and signed/unsigned
	stuff.

	* ogdi/c-api/makefile, ogdi/gltpd/makefile:
	Disable running rpcgen unless explicitly requested due to problems.

2001-02-07  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: vrf.c, utils.c
	Fixed a variety of memory leak problems, partly based on contributions
	from PCI, and Intergraph.
	
       http://sourceforge.net/bugs/?func=detailbug&bug_id=122434&group_id=11181

	* vpflib/vpftable.c: Avoid problem in vpf_open_table() with mixture
	of unix and dos style separators.

	* ogdi/driver/dted/utils.c, dted.c: Fixed various memory leaks.
