@@ -1,5 +1,7 @@
 2001-02-19  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* restored compilation of ogdi/glutil, still used in some places.
+
 	* testsuite: added RPF test data, and script. 
 
 	* ogdi/makefile: removed glutil from subdirs, it doesn't seem to
